--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class = "p_img" id="soc"></div> <b>Общественная организация <b></div>
         </a>
 
-        <a href="#">
+        <a href="/pro/">
           <div class="struct">
             <div class = "p_img" id="prod"></div>
             <b>Медиакомпания
